# flight_simulation

./: LICENSE  README.md  cost_analyzer.py  data_loader.py  main.py  requirements.txt  route_finder.py  world_map.py
flight_simulation/: README.md  app.py  gui.py  main.py  pyproject.toml  requirements.txt
flight_simulation/data/: sample_airports.csv  sample_routes.csv
flight_simulation/experiments/: eval_shift_robustness.py  resilience.py
flight_simulation/src/: __init__.py  airline_sim.py  calibration.py  cost_analyzer.py  data_loader.py  demand.py  disruption.py  fleet.py  gui_app.py  io_utils.py  metrics.py  multiobjective.py  optimizer.py  revenue.py  route_finder.py  shift.py  srcr.py  uncertainty.py  world_map.py
flight_simulation/tests/: conftest.py  core_test.py
