[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight_simulation"
version = "0.1.0"
description = "Risk-aware flight routing + Monte Carlo simulation (demo project)."
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.22.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
packages = ["src", "experiments"]
